display: contents; - feature done: 'display: contents;' - create template for every demo page - fulfill the show list of 'best web features of 2018'

--- a/common/index.less
+++ b/common/index.less
@@ -14,25 +14,208 @@
 }
 
 ::selection {
-  background: #c3eeec;
+  background: #bfe0ee;
 }
 
 body {
-  font-family: 'Staatliches', cursive;
+  font-family: 'Open Sans', sans-serif;
   margin: 0;
+  color: #444444;
+
+  a {
+    color: #6497b0;
+  }
 }
 
-.label {
-  display: inline;
-  border-radius: 1.5em;
-  padding: .3em 1.5em;
-  color: white;
+header {
+  position: absolute;
+  width: 100%;
+  z-index: 10;
+  padding: .65em 2em;
+  font-size: 1.75em;
+  font-family: 'Staatliches', cursive;
+  box-sizing: border-box;
 
-  &.bg-orange {
-    background: orange;
+  &.fixed {
+    background: white;
+    position: fixed;
+    box-shadow: 2px 4px 10px rgba(0,0,0,.1);
   }
+
+  &.center {
+    justify-content: center;
+  }
+
+  a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+
+    &:hover {
+      img {
+        transform: rotate(180deg)
+      }
+    }
+  }
+
+  img {
+    width: 1em;
+    height: 1em;
+    padding: .15em;
+    transition: transform .25s ease-in-out;
+  }
+
+  &.dark {
+    color: #444444;
+
+    a {
+      color: #444444;
+    }
+
+    img {
+      background: #444444;
+      border-radius: 50%;
+    }
+  }
+
+  &.light {
+    color: white;
+
+    a {
+      color: white;
+    }
+  }
+}
+
+main {
+  min-height: 50vh;
+
+  .label {
+    display: inline;
+    border-radius: 1.5em;
+    padding: .3em 1.5em;
+    color: white;
+
+    &.bg-orange {
+      background: orange;
+    }
+  }
+
+  .content {
+    background: white;
+    margin: 0;
+    padding: 6em 20vw 0;
+    font-size: 1.1em;
+    color: #444;
+
+    .title-wrapper {
+      border-top: #444 4px solid;
+
+      .title {
+        font-family: 'Staatliches', cursive;
+        font-size: 3em;
+      }
+    }
+
+    .desc {
+      margin-top: 2em;
+
+      .title {
+        font-family: 'Staatliches', cursive;
+        font-size: 1.5em;
+      }
+
+      .referencer {
+        margin-top: 5px;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .navigator {
+    font-family: 'Staatliches', cursive;
+    padding: 1em 20vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.5em;
+    line-height: .85em;
+
+    a {
+      text-decoration: none;
+      color: #444444;
+    }
+
+    .desc {
+      font-size: .7em;
+    }
+  }
+}
+
+footer {
+  padding: 6em 20vw 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+
+  .logo {
+    font-family: 'Libre Barcode 128 Text', cursive;
+
+    .title {
+      font-size: 3em;
+      text-decoration: none;
+      color: #444444;
+    }
+  }
+
+  .social-media-container {
+    display: flex;
+    color: #444444;
+
+    img {
+      width: 1.35em;
+      height: 1.35em;
+      filter: invert(.7);
+    }
+  }
+}
+
+.mt-s {
+  margin-top: 15px;
 }
 
 .mt-m {
   margin-top: 30px;
+}
+
+.mr-s {
+  margin-right: 15px;
+}
+
+.ml-s {
+  margin-left: 15px;
+}
+
+.text-end {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.flex-wrp {
+  display: flex;
+
+  &.flex-column {
+    flex-direction: column;
+  }
+
+  &.item-center {
+    align-items: center;
+  }
+
+  &.content-between {
+    justify-content: space-between;
+  }
 }
