timeline feature - add timeline feature to show more info about the article

--- a/common/index.less
+++ b/common/index.less
@@ -39,7 +39,7 @@ header {
   &.fixed {
     background: white;
     position: fixed;
-    box-shadow: 2px 4px 10px rgba(0,0,0,.1);
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, .1);
   }
 
   &.center {
@@ -218,4 +218,8 @@ footer {
   &.content-between {
     justify-content: space-between;
   }
+}
+
+.relative {
+  position: relative;
 }
