Project Feature: Search

--- a/common/index.less
+++ b/common/index.less
@@ -231,6 +231,10 @@ footer {
     align-items: center;
   }
 
+  &.item-end {
+    align-items: flex-end;
+  }
+
   &.content-between {
     justify-content: space-between;
   }
