Feature: toggleAttribute - add new feature - remove some trivial features from the list

--- a/common/index.less
+++ b/common/index.less
@@ -136,6 +136,15 @@ main {
         font-weight: bold;
       }
     }
+
+    .code-wrapper {
+      background: #ebebeb;
+      padding: .5em 2em;
+
+      pre {
+        font-family: Consolas, serif;
+      }
+    }
   }
 
   .navigator {
